# STDS_Blockchain

./: .gitignore
Blockchain_venv/: pyvenv.cfg
Blockchain_venv/Scripts/: activate  activate.bat
backend/: .gitignore  LICENSE.md  README.md  requirements.txt
backend/src/: manage.py
backend/src/core/: apps.py  consumers.py  dbrouters.py  models.py  urls.py  utils.py  views.py
backend/src/core/functions/blocks/: blockGeneration.py  blockQueries.py  classBlock.py
backend/src/core/migrations/: 0001_initial.py  0003_remove_block_createdat_block_acceptedat_and_more.py  0004_calculationrange.py  0005_remove_calculationrange_upperbound.py
backend/src/core/templates/: blockLayout.html  coreLayout.html  miningTemplate.html
backend/src/projectControl/: asgi.py  settings.py  urls.py
backend/src/rust_wasm/: Cargo.toml
backend/src/rust_wasm/src/: lib.rs  models.rs
backend/src/static/css/: bulma.css
backend/src/static/pkg/: calc.js  calc_bg.wasm
backend/src/templates/: layout.html
frontend/blockchainfrontend/: index.html
frontend/blockchainfrontend/block/242523/: index.html
src/: block.py  blockchain.py
src/ChainStuff/: app.py
src/core/: models.py  urls.py  views.py
src/core/functions/blocks/: blockGeneration.py  classBlock.py
src/core/functions/templateContext/: blockUrl.py  coreUrl.py
src/core/functions/transactions/: transactionGeneration.py  transactionQueries.py
src/core/migrations/: 0002_auto_20220421_0054.py
src/core/templates/: blockLayout.html  coreLayout.html
src/projectControl/: settings.py
src/templates/: layout.html
(+2 files in other folders)
