[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = { version = "0.10.2", default-features = false }
base16ct = { version = "0.1.1", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde_derive = "^1.0.59"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3.57", features = ["WebSocket", "MessageEvent", "Window", "Location", "Document", "Element", "HtmlElement", "Node", "Headers", "Request", "Response"] }
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
console_error_panic_hook = "0.1.7"
